# votess-benchmark

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  init.sh  param.json  run.sh
cgal/: CMakeLists.txt  main.cpp
include/: generate_uniform_dataset.hpp  measure_execution_time.hpp  param.hpp
python/: plot.py
qhull/: CMakeLists.txt  main.cpp
voropp/: CMakeLists.txt  main.cpp
votess-cpu/: CMakeLists.txt  main.cpp
votess-gpu/: CMakeLists.txt  main.cpp
